tests/ui/error-codes/E0161.base.stderr
error[E0161]: cannot move a value of type `dyn Bar`
  --> $DIR/E0161.rs:16:5
   |
LL |     x.f();
   |     ^^^^^ the size of `dyn Bar` cannot be statically determined

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0161`.
